# fog_lib

./: CHANGELOG.rst  CMakeLists.txt  Dockerfile.build_deb  README.md  build_deb.sh  package.xml
.ci/: build.sh  test.sh
.github/workflows/: main.yml
include/fog_lib/: gps_conversions.h  median_filter.h  misc.h  mutex_utils.h  params.h  scope_timer.h
include/fog_lib/geometry/: cyclic.h  misc.h
src/: fog_lib.cpp  median_filter.cpp  misc.cpp  scope_timer.cpp
src/geometry/: cyclic.cpp  misc.cpp
test/geometry/: geometry_tests.cpp
test/median_filter/: tests.cpp
