<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>fog_lib</name>
  <version>0.0.8</version>
  <description>Common classes, functions and utilities for the fog software. Based on mrs_lib (https://github.com/ctu-mrs/mrs_lib)</description>
  <maintainer email="matous.vrba@fly4future.com">Matouš Vrba</maintainer>
  <author email="matous.vrba@fly4future.com">Matouš Vrba</author>
  <author email="tomas.baca@fly4future.com">Tomas Baca</author>
  
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcl_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
